--- a/index.html
+++ b/index.html
@@ -4,23 +4,46 @@
 <head>
 </head>
 <body>
-    <div class="tradingview-widget-container" style="width:100%">
-      <div class="tradingview-widget-container__widget" style="height:calc(100% - 32px);width:100%"></div>
-      <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
-      <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
-      {
-      "height": "700",    
-      "autosize": true,
-      "symbol": "FX:GBPUSD",
-      "interval": "D",
-      "timezone": "Etc/UTC",
-      "theme": "dark",
-      "style": "1",
-      "locale": "en",
-      "allow_symbol_change": true,
-      "calendar": false,
-      "support_host": "https://www.tradingview.com"
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+  {
+  "symbols": [
+    {
+      "description": "",
+      "proName": "FX:EURUSD"
+    },
+    {
+      "description": "",
+      "proName": "FX:GBPUSD"
+    },
+    {
+      "description": "",
+      "proName": "NASDAQ:NDX"
+    },
+    {
+      "description": "",
+      "proName": "OANDA:XAUUSD"
+    },
+    {
+      "description": "",
+      "proName": "FRED:SP500"
+    },
+    {
+      "description": "",
+      "proName": "CAPITALCOM:US30"
     }
+  ],
+  "isTransparent": true,
+  "showSymbolLogo": true,
+  "colorTheme": "dark",
+  "locale": "en"
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
       </script>
     </div>
 </body>
