--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 </head>
 <body>
 <!-- TradingView Widget BEGIN -->
+<!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
   {
   "symbols": [
     {
@@ -21,10 +22,6 @@
     },
     {
       "description": "",
-      "proName": "NASDAQ:NDX"
-    },
-    {
-      "description": "",
       "proName": "OANDA:XAUUSD"
     },
     {
@@ -33,16 +30,22 @@
     },
     {
       "description": "",
+      "proName": "NASDAQ:NDX"
+    },
+    {
+      "description": "",
       "proName": "CAPITALCOM:US30"
     }
   ],
-  "isTransparent": true,
   "showSymbolLogo": true,
+  "isTransparent": true,
+  "displayMode": "adaptive",
   "colorTheme": "dark",
   "locale": "en"
 }
   </script>
 </div>
+<!-- TradingView Widget END -->
 <!-- TradingView Widget END -->
       </script>
     </div>
